siberian_ctypes.py


sPhysicsCSGetHitObject = _siberian.sPhysicsCSGetHitObject
sPhysicsCSGetHitObject.argtypes = (sObject_p, uint32_t)
sPhysicsCSGetHitObject.restype = sObject_p

sPhysicsCSGetHitObjectCount = _siberian.sPhysicsCSGetHitObjectCount
sPhysicsCSGetHitObjectCount.argtypes = (sObject_p,)
sPhysicsCSGetHitObjectCount.restype = uint32_t

sPhysicsRSSetRange = _siberian.sPhysicsRSSetRange
_siberian.sPhysicsRSSetRange.argtypes = (POINTER(sPhysicsRS), c_float)
_siberian.sPhysicsRSSetRange.restype = None

sPhysicsRadarSetAngle = _siberian.sPhysicsRadarSetAngle
sPhysicsRadarSetAngle.argtypes = (POINTER(sPhysicsRS), c_float)
sPhysicsRadarSetAngle.restype = None

sPhysicsAutoDisable = _siberian.sPhysicsAutoDisable
sPhysicsAutoDisable.argtypes = (sObject_p, c_bool)

_siberian.sPhysicsSetAngularVelocity.argtypes = (
    sObject_p, c_double, c_double, c_double)
_siberian.sPhysicsSetAngularVelocity.restype = None

sPhysicsSetSpeedGlobal = _siberian.sPhysicsSetSpeedGlobal
sPhysicsSetSpeedGlobal.argtypes = (sObject_p, laType, uint8_t)
sPhysicsSetSpeedGlobal.restype = None

sPhysicsSetSpeedXLocal = _siberian.sPhysicsSetSpeedXLocal
sPhysicsSetSpeedXLocal.argtypes = (sObject_p, c_float)
sPhysicsSetSpeedXLocal.restype = None

sPhysicsSetSpeedYLocal = _siberian.sPhysicsSetSpeedYLocal
sPhysicsSetSpeedYLocal.argtypes = (sObject_p, c_float)
sPhysicsSetSpeedYLocal.restype = None

sPhysicsSetSpeedZLocal = _siberian.sPhysicsSetSpeedZLocal
sPhysicsSetSpeedZLocal.argtypes = (sObject_p, c_float)
sPhysicsSetSpeedZLocal.restype = None

_siberian.sPhysicsGetLinearVelocity.argtypes = (sObject_p,)
_siberian.sPhysicsGetLinearVelocity.restype = laType

_siberian.sPhysicsSuspend.argtypes = sObject_p,
_siberian.sPhysicsSuspend.restype = None

_siberian.sPhysicsResume.argtypes = sObject_p,
_siberian.sPhysicsResume.restype = None

# Specific object functions

_siberian.sSkeletonSetPlayAction.argtypes = (
    sObject_p, c_char_p, uint8_t, uint32_t, c_float, c_float, c_float)
_siberian.sSkeletonSetPlayAction.restype = None

sActionSetParam = _siberian.sActionSetParam
sActionSetParam.argtypes = sObject_p, uint8_t, uint32_t, c_float, c_float, c_float
sActionSetParam.restype = None

_siberian.sActionProcess.argtypes = (sObject_p,)
_siberian.sActionProcess.restype = None

sSkeletonSetActionInterval = _siberian.sSkeletonSetActionInterval
sSkeletonSetActionInterval.argtypes = POINTER(
    sObject), uint8_t, c_float, c_float
sSkeletonSetActionInterval.restype = None

sBoneGetSkeleton = _siberian.sBoneGetSkeleton
sBoneGetSkeleton.argtypes = (sObject_p,)
sBoneGetSkeleton.restype = sObject_p

sBoneGetAnimatedFlag = _siberian.sBoneGetAnimatedFlag
sBoneGetAnimatedFlag.argtypes = (sObject_p,)
sBoneGetAnimatedFlag.restype = c_int

sBoneSetAnimatedFlag = _siberian.sBoneSetAnimatedFlag
sBoneSetAnimatedFlag.argtypes = (sObject_p, c_int)
sBoneSetAnimatedFlag.restype = None

sSkeletonGetActionFrame = _siberian.sSkeletonGetActionFrame
sSkeletonGetActionFrame.argtypes = (sObject_p, c_int)
sSkeletonGetActionFrame.restype = c_float

sSkeletonSetActionFrame = _siberian.sSkeletonSetActionFrame
sSkeletonSetActionFrame.argtypes = sObject_p, uint8_t, c_float
sSkeletonSetActionFrame.restype = None

sSkeletonGetActionFrame2 = _siberian.sSkeletonGetActionFrame2
sSkeletonGetActionFrame2.argtypes = (sObject_p, c_int)
sSkeletonGetActionFrame2.restype = c_float

sSkeletonSetActionFrame2 = _siberian.sSkeletonSetActionFrame2
sSkeletonSetActionFrame2.argtypes = sObject_p, c_int, c_float
sSkeletonSetActionFrame2.restype = None

sSkeletonResetPose = _siberian.sSkeletonResetPose
sSkeletonResetPose.argtypes = sObject_p,
sSkeletonResetPose.restype = None

sSkeletonAddPoseFromLayerToPose = _siberian.sSkeletonAddPoseFromLayerToPose
sSkeletonAddPoseFromLayerToPose.argtypes = POINTER(
    sObject), uint8_t, c_float, c_float
sSkeletonAddPoseFromLayerToPose.restype = None

sSkeletonMixPoseFromLayerWithPose = _siberian.sSkeletonMixPoseFromLayerWithPose
sSkeletonMixPoseFromLayerWithPose.argtypes = POINTER(
    sObject), uint8_t, c_float, c_float
sSkeletonMixPoseFromLayerWithPose.restype = None

sSkeletonAddPoseFromActionToPose = _siberian.sSkeletonAddPoseFromActionToPose
sSkeletonAddPoseFromActionToPose.argtypes = POINTER(
    sObject), c_char_p, uint32_t, c_float, c_float
sSkeletonAddPoseFromActionToPose.restype = None

sSkeletonMixPoseFromActionWithPose = _siberian.sSkeletonMixPoseFromActionWithPose
sSkeletonMixPoseFromActionWithPose.argtypes = POINTER(
    sObject), c_char_p, uint32_t, c_float, c_float
sSkeletonMixPoseFromActionWithPose.restype = None

sActionIsPlaying = _siberian.sActionIsPlaying
sActionIsPlaying.argtypes = (sObject_p, uint8_t)
sActionIsPlaying.restype = uint8_t

sActionStop = _siberian.sActionStop
sActionStop.argtypes = (sObject_p, uint8_t)

sSkeletonSetAction = _siberian.sSkeletonSetAction
sSkeletonSetAction.argtypes = (sObject_p, uint8_t, c_char_p)

sSkeletonGetBone = _siberian.sSkeletonGetBone
sSkeletonGetBone.argtypes = (sObject_p, c_char_p)
sSkeletonGetBone.restype = sObject_p

sSkeletonGetBoneByIndex = _siberian.sSkeletonGetBoneByIndex
sSkeletonGetBoneByIndex.argtypes = (sObject_p, uint16_t)
sSkeletonGetBoneByIndex.restype = sObject_p

sSkeletonGetBoneCount = _siberian.sSkeletonGetBoneCount
sSkeletonGetBoneCount.argtypes = (sObject_p,)
sSkeletonGetBoneCount.restype = uint16_t

sSkeletonSetLayerWeight = _siberian.sSkeletonSetLayerWeight
sSkeletonSetLayerWeight.argtypes = sObject_p, uint8_t, c_float
sSkeletonSetLayerWeight.restype = None

sSkeletonSetLayerTime = _siberian.sSkeletonSetLayerTime
sSkeletonSetLayerTime.argtypes = sObject_p, uint8_t, c_float
sSkeletonSetLayerTime.restype = None

sSkeletonGetLayerTime = _siberian.sSkeletonGetLayerTime
sSkeletonGetLayerTime.argtypes = sObject_p, uint8_t
sSkeletonGetLayerTime.restype = c_float

sSkeletonSetLayerSpeed = _siberian.sSkeletonSetLayerSpeed
sSkeletonSetLayerSpeed.argtypes = sObject_p, uint8_t, c_float
sSkeletonSetLayerSpeed.restype = None

sSkeletonGetLayerSpeed = _siberian.sSkeletonGetLayerSpeed
sSkeletonGetLayerSpeed.argtypes = sObject_p, uint8_t
sSkeletonGetLayerSpeed.restype = c_float


class sCamera(Structure):
    _fields_ = sObjectBase._fields_[:]
    _fields_.extend([
        ('__projection', laType),
        ('__viewProjection', laType),
        ('__noise', GLuint),
        ('__render_texture', GLuint),
        ('__render_result', GLuint),
        ('__render_texture1', GLuint),
        ('__render_texture2', GLuint),
        ('__render_normal', GLuint),
        # ('__render_distance',GLuint),
        ('__render_distance_glass', GLuint),
        ('__render_specular', GLuint),
        ('__render_ambient', GLuint),
        ('__render_vectors', GLuint),
        ('__render_depth', GLuint),
        ('__render_buffer', GLuint),
        ('__render_fb', GLuint),

        ('__render_normals_texture', GLuint),
        ('__render_normals_depth', GLuint),
        ('__render_normals_buffer', GLuint),
        ('__render_normals_fb', GLuint),

        ('__render_plane', sMesh),
        ('__filters', POINTER(sShader)*8),
        ('__mipmap_layers', uint32_t),
        # ('skybox',sShader),
        ('zNear', c_float),
        ('zFar', c_float),
        ('FOV', c_float),
        ('_width', uint16_t),
        ('_height', uint16_t),
        ('_view_point', sObject_p)])

    @property
    def height(self) -> int:
        return int(self._height)

    @property
    def width(self) -> int:
        return int(self._width)

    @property
    def view_point(self) -> sObject:
        if self._view_point:
            return self._view_point.contents
        else:
            None

    @view_point.setter
    def view_point(self, obj: sObject):
        self._view_point = pointer(obj)


class sLight(Structure):
    _fields_ = sCamera._fields_[:]
    _fields_.extend([
        ('type', uint8_t),
        ('color', sColour),
        ('inner', c_float),
        ('outer', c_float),
        ('shadow', c_bool)])


class sScene(Structure):
    _fields_ = [
        ('_behaviour', behaviour),
        ('_camera', sCamera),
        ('_meshes', POINTER(sMesh)),
        ('_materials', POINTER(sMaterial)),
        ('_textures', POINTER(sTexture)),
        ('_cubemap', POINTER(sTexture)),
        ('_lights', POINTER(POINTER(sLight))),
        ('_objects', POINTER(sObject_p)),
        ('_skelets', POINTER(c_void_p)),  # sSkeleton
        ('_lights_inactive', POINTER(sLight)),
        ('_objects_inactive', sObject_p),
        ('_skelets_inactive', c_void_p),
        ('_actions', c_void_p),

        ('_gobjects', POINTER(POINTER(c_void_p))),
        ('_gobjects_count', index_t),
        ('_gobjects_counter', index_t),

        ('_shader_list', POINTER(sShader)*8),

        ('_mesh_count', index_t),
        ('_material_count', index_t),
        ('_texture_count', index_t),
        ('_lights_count', index_t),
        ('_objects_count', index_t),
        ('_skelets_count', index_t),
        ('_lights_inactive_count', uint32_t),
        ('_objects_inactive_count', index_t),
        ('_skelets_inactive_count', index_t),
        ('_actions_count', index_t),
        ('_world', dWorldID),
        ('_space', dSpaceID),
        ('_contactgroup', dJointGroupID),
        ('__joints', dJointGroupID)]

    __scenes = {}

    def __init__(self, filename: str):
        Structure.__init__(self)
        _siberian.sSceneLoad(self, filename.encode())
        #print("Adding scene to static list")
        sScene.__scenes[addressof(self)] = {
            'scene': self, 'pyfunctions': {}, 'pydata': {}}
        self.__pyfunctions = sScene.__scenes[addressof(self)]['pyfunctions']
        self.__pydata = sScene.__scenes[addressof(self)]['pydata']

    @property
    def pyfunctions(self) -> dict:
        return sScene.__scenes[addressof(self)]['pyfunctions']

    @property
    def pydata(self) -> dict:
        return sScene.__scenes[addressof(self)]['pydata']

    @property
    def camera(self):
        return self._camera

    def getObject(self, name: str) -> sObject:
        ptr = _siberian.sSceneGetObject(pointer(self), c_char_p(name.encode()))
        if ptr:
            return ptr.contents
        else:
            None

    def getMaterial(self, name: str) -> sMaterial:
        return _siberian.sSceneGetMaterial(self, name.encode()).contents

    def addObject(self, name: str) -> sObject:
        ptr = _siberian.sSceneAddObject(pointer(self), c_char_p(name.encode()))
        if ptr:
            return ptr.contents
        else:
            return None

    def loadAction(self, path: str, name: str):
        sActionLoad(pointer(self), path.encode(), name.encode())

    def setScript(self, func : Callable[[sScene,], None]):
        def f(scene):
            func(cast(scene, POINTER(sScene)).contents)
        script = behaviour(f)
        sScene.__scenes[addressof(self)]['script'] = script
        _siberian.sSceneSetScript(self, script)

    def setSkyTexture(self, texture: sTexture):
        _siberian.sSceneSetSkyTexture(self, texture)

    def loadMesh(self, name: str):
        if isinstance(name, bytes):
            return _siberian.sSceneAddMesh(self, name).contents
        elif isinstance(name, str):
            return _siberian.sSceneAddMesh(self, name.encode()).contents
        else:
            raise TypeError(
                "loadMesh's \"name\" argument must be str or bytes")

    def removeMesh(self, name: str):
        if isinstance(name, bytes):
            _siberian.sSceneRemoveMesh(self, name)
        elif isinstance(name, str):
            _siberian.sSceneRemoveMesh(self, name.encode())
        else:
            raise TypeError(
                "loadMesh's \"name\" argument must be str or bytes")

    def destroy(self):
        _siberian.sSceneFree(self)
        del sScene.__scenes[addressof(self)]


"""
    sSound functions
"""
SOUND_NO_DEVICE = -2
SOUND_NO_CONTEXT = -1
SOUND_OK = 0
SOUND_OAL_ERROR = 1
SOUND_FILE_NOT_FOUND = 2
SOUND_DOES_NOT_EXISTS = 3
